--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -16,3 +16,11 @@ jobs:
 
       - name: Majsoul login
         run: python login.py ${{ secrets.EMAIL }} ${{ secrets.PASSWD }}
+
+      - name: Commit and push log file
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add log.txt
+          git diff --staged --quiet || git commit -m "Auto update login log - $(date +'%Y-%m-%d %H:%M:%S')"
+          git push
